@@ -46,6 +46,7 @@
 VexControl VG_(clo_vex_control);
 Bool   VG_(clo_error_limit)    = True;
 Int    VG_(clo_error_exitcode) = 0;
+HChar *VG_(clo_error_markers)[2] = {NULL, NULL};
 
 #if defined(VGPV_arm_linux_android) \
     || defined(VGPV_x86_linux_android) \
