@@ -1,3 +1,4 @@
+[[[
 Conditional jump or move depends on uninitialised value(s)
    at 0x........: main (manuel1.c:7)
 
