@@ -1,3 +1,4 @@
 Use of uninitialised value of size 8
    at 0x........: main (manuel2.c:10)
 
+]]]
