@@ -40,6 +40,8 @@ usage: valgrind [options] prog-and-args
     --num-callers=<number>    show <number> callers in stack traces [12]
     --error-limit=no|yes      stop showing new errors if too many? [yes]
     --error-exitcode=<number> exit code to return if errors found [0=disable]
+    --error-markers=<begin>,<end> add lines with begin/end markers before/after
+                              each error output in plain text mode [none]
     --show-below-main=no|yes  continue stack traces below main() [no]
     --default-suppressions=yes|no
                               load default suppressions [yes]
